packages/hyperchad/template/tests/warnings/hex-color-integer-suffix-non-hex.stderr
error: Code generation failed in container! macro.

       Error: Unknown attribute '123u32'. Supported attributes include: class, width, height, padding, padding-x, padding-y, padding-left, padding-right, padding-top, padding-bottom, margin, margin-x, margin-y, margin-left, margin-right, margin-top, margin-bottom, border, border-x, border-y, border-top, border-right, border-bottom, border-left, background, color, align-items, justify-content, text-align, white-space, text-decoration, direction, position, cursor, user-select, overflow-wrap, text-overflow, visibility, overflow-x, overflow-y, font-family, font-size, font-weight, opacity, border-radius, gap, hidden, debug, flex, flex-grow, flex-shrink, flex-basis, HTMX attributes (hx-get, hx-post, hx-put, hx-delete, hx-patch, hx-trigger, hx-target, hx-swap), and action attributes (fx-click, fx-click-outside, fx-resize, fx-immediate, fx-hover, fx-change, fx-mousedown, fx-http-before-request, fx-http-after-request, fx-http-success, fx-http-error, fx-http-abort, fx-http-timeout, and any other fx-* event)

       This usually indicates:
       - Unknown element types
       - Invalid attribute combinations
       - Unsupported template features
       - Complex nested structures that failed to generate
  --> tests/warnings/hex-color-integer-suffix-non-hex.rs:16:13
   |
16 |       let _ = container! {
   |  _____________^
17 | |         div color=#123u32 { "Integer with u32 suffix - 'u' not hex" }
18 | |     };
   | |_____^
   |
   = note: this error originates in the macro `container` (in Nightly builds, run with -Z macro-backtrace for more info)
